--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "ng2-translate",
+  "version": "3.1.0",
   "description": "An implementation of angular translate for Angular 2",
   "scripts": {
     "test": "tsc && karma start",
